--- a/resources/testweb/creator_pricing.html
+++ b/resources/testweb/creator_pricing.html
@@ -1064,6 +1064,88 @@
 </div>
 <!-- end of login modal -->
 
+<div id="userDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Disclaimer</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+         <ul>
+          <li>All transactions are performed in BTC, using currency conversions updated every 15 minutes from https://bitcoinaverage.com/ </li>
+          <li>Bitpieces does not guarantee the value of your pieces. </li>
+          <li>Bitpieces does not guarantee that a creator has the funds to pay rewards. Buying pieces is a contract between you and the creator. Read about creator safety 
+          <a href='/FAQ#how_do_i_know_if_a_creator_is_safe'>here</a>. </li>
+          <li>Legal action must be taken against the creator directly, if they fail to provide you with rewards, or if the value of their pieces decreases dramatically. </li>
+          <li> Your bitcoin wallet may charge you a small fee for making a deposit. </li>
+        </ul>
+      </div>
+
+
+    </div> 
+    <div class="modal-footer">
+     <button type="button" class="btn btn-primary" data-dismiss="modal">Okay, I accept</button>
+   </div>
+
+   </div>
+ </div>
+</div>
+
+<div id="recoverPasswordModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        
+        <h4 class="modal-title">Recover Password</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+         Enter your username below to receive your login information
+       </br>
+     </div>
+     <form id="recoverPasswordForm" class="form-horizontal" role="form"
+     data-bv-message="This value is not valid"
+     data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
+     data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
+     data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
+
+     <div class="form-group">
+       <label for="inputUsername4" class="col-sm-2 control-label">Username</label>
+       <div class="col-sm-10">
+        <input name="username" type="Username" class="form-control" id="inputUsername4" placeholder="Username or Email"
+        data-bv-message="The username is not valid"
+
+        data-bv-notempty="true"
+        data-bv-notempty-message="The username is required and cannot be empty"
+
+        data-bv-regexp="true"
+        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
+
+        data-bv-stringlength="true"
+        data-bv-stringlength-min="3"
+        data-bv-stringlength-max="30"
+        data-bv-stringlength-message="The username must be more than 3 and less than 30 characters long"
+
+        />
+
+
+      </div> 
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button id="recoverPasswordBtn" type="submit" class="btn btn-primary">Email me</button>
+      </div>
+    </div>
+  </form>
+</div>
+</div>
+</div>
+</div>
+
 
 
 
