--- a/resources/testweb/testing_home.html
+++ b/resources/testweb/testing_home.html
@@ -178,74 +178,74 @@
                   <div class="modal-body">
 
                     <h3> Sign in &nbsp;&nbsp;&nbsp; 
-                    <small> <a href="#" data-toggle="modal" data-target="#recoverPasswordModal">Recover password </a> </small></h3>
+                      <small> <a href="#" data-toggle="modal" data-target="#recoverPasswordModal">Recover password </a> </small></h3>
 
-                    <form id="loginForm" class="form-horizontal" role="form">
-                      <div id="userLoginDiv" class="form-group">
-                        <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
-                        <div class="col-sm-10">
-                          <input name="username" type="Username" class="form-control" id="inputUsername3" placeholder="Username or Email"
-                          data-bv-message="The username is not valid"
+                      <form id="loginForm" class="form-horizontal" role="form">
+                        <div id="userLoginDiv" class="form-group">
+                          <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
+                          <div class="col-sm-10">
+                            <input name="username" type="Username" class="form-control" id="inputUsername3" placeholder="Username or Email"
+                            data-bv-message="The username is not valid"
 
-                          data-bv-notempty="true"
-                          data-bv-notempty-message="The username is required and cannot be empty"
+                            data-bv-notempty="true"
+                            data-bv-notempty-message="The username is required and cannot be empty"
 
-                          data-bv-regexp="true"
-                          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
-                          data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
+                            data-bv-regexp="true"
+                            data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                            data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
-                          data-bv-stringlength="true"
-                          data-bv-stringlength-min="6"
-                          data-bv-stringlength-max="30"
-                          data-bv-stringlength-message="The username must be more than 6 and less than 30 characters long"
+                            data-bv-stringlength="true"
+                            data-bv-stringlength-min="3"
+                            data-bv-stringlength-max="30"
+                            data-bv-stringlength-message="The username must be more than 3 and less than 30 characters long"
 
-                          >
+                            >
+                          </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                        <div class="col-sm-10">
-                          <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password"
+                        <div class="form-group">
+                          <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                          <div class="col-sm-10">
+                            <input name="password" type="password" class="form-control" id="inputPassword3" placeholder="Password"
 
-                          data-bv-notempty="true"
-                          data-bv-notempty-message="The password is required and cannot be empty"
+                            data-bv-notempty="true"
+                            data-bv-notempty-message="The password is required and cannot be empty"
 
-                          data-bv-different="true"
-                          data-bv-different-field="username"
-                          data-bv-different-message="The password cannot be the same as username" 
-                          >
+                            data-bv-different="true"
+                            data-bv-different-field="username"
+                            data-bv-different-message="The password cannot be the same as username" 
+                            >
+                          </div>
                         </div>
-                      </div>
-                      <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                          <div class="checkbox">
-                            <label>
-                              <input name="remember" type="checkbox"> Remember me
+                        <div class="form-group">
+                          <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
+                              <label>
+                                <input name="remember" type="checkbox"> Remember me
+                              </label>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <div class="col-sm-offset-2 col-sm-10">
+                            <div class="checkbox">
+
+                             <label>
+                              <input name="creatorCheckbox" type="checkbox" id="creatorCheckbox" value="creator"> I'm a Creator
                             </label>
+
                           </div>
                         </div>
                       </div>
+
+
+
+
                       <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                          <div class="checkbox">
-
-                           <label>
-                            <input name="creatorCheckbox" type="checkbox" id="creatorCheckbox" value="creator"> I'm a Creator
-                          </label>
-
+                          <button id="signinBtn" type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>">Sign in</button>
                         </div>
                       </div>
-                    </div>
-
-                
-                     
-
-                    <div class="form-group">
-                      <div class="col-sm-offset-2 col-sm-10">
-                        <button id="signinBtn" type="submit" class="btn btn-primary">Sign in</button>
-                      </div>
-                    </div>
-                  </form>
+                    </form>
 
                 <!-- The different sign ins 
                 <table style="width:100%">
@@ -296,9 +296,9 @@
           data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
           data-bv-stringlength="true"
-          data-bv-stringlength-min="6"
+          data-bv-stringlength-min="3"
           data-bv-stringlength-max="30"
-          data-bv-stringlength-message="The username must be more than 6 and less than 30 characters long"
+          data-bv-stringlength-message="The username must be more than 3 and less than 30 characters long"
 
           />
 
@@ -395,6 +395,89 @@
 
 </div>
 
+</div>
+</div>
+</div>
+<!-- end of login modal -->
+
+<div id="userDisclaimerModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        <h4 class="modal-title">Disclaimer</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+         <ul>
+          <li>All transactions are performed in BTC, using currency conversions updated every 15 minutes from https://bitcoinaverage.com/ </li>
+          <li>Bitpieces does not guarantee the value of your pieces. </li>
+          <li>Bitpieces does not guarantee that a creator has the funds to pay rewards. Buying pieces is a contract between you and the creator. Read about creator safety 
+          <a href='/FAQ#how_do_i_know_if_a_creator_is_safe'>here</a>. </li>
+          <li>Legal action must be taken against the creator directly, if they fail to provide you with rewards, or if the value of their pieces decreases dramatically. </li>
+          <li> Your bitcoin wallet may charge you a small fee for making a deposit. </li>
+        </ul>
+      </div>
+
+
+    </div> 
+    <div class="modal-footer">
+     <button type="button" class="btn btn-primary" data-dismiss="modal">Okay, I accept</button>
+   </div>
+
+   </div>
+ </div>
+</div>
+
+<div id="recoverPasswordModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>        
+        <h4 class="modal-title">Recover Password</h4>
+      </div>
+      <div class="modal-body">
+        <div class="text">
+         Enter your username below to receive your login information
+       </br>
+     </div>
+     <form id="recoverPasswordForm" class="form-horizontal" role="form"
+     data-bv-message="This value is not valid"
+     data-bv-feedbackicons-valid="glyphicon glyphicon-ok"
+     data-bv-feedbackicons-invalid="glyphicon glyphicon-remove"
+     data-bv-feedbackicons-validating="glyphicon glyphicon-refresh">
+
+     <div class="form-group">
+       <label for="inputUsername4" class="col-sm-2 control-label">Username</label>
+       <div class="col-sm-10">
+        <input name="username" type="Username" class="form-control" id="inputUsername4" placeholder="Username or Email"
+        data-bv-message="The username is not valid"
+
+        data-bv-notempty="true"
+        data-bv-notempty-message="The username is required and cannot be empty"
+
+        data-bv-regexp="true"
+        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
+
+        data-bv-stringlength="true"
+        data-bv-stringlength-min="3"
+        data-bv-stringlength-max="30"
+        data-bv-stringlength-message="The username must be more than 3 and less than 30 characters long"
+
+        />
+
+
+      </div> 
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <button id="recoverPasswordBtn" type="submit" class="btn btn-primary">Email me</button>
+      </div>
+    </div>
+  </form>
+</div>
 </div>
 </div>
 </div>
