--- a/resources/uncommon.html
+++ b/resources/uncommon.html
@@ -33,8 +33,8 @@ RewriteRule ^(.+)$ $1.html [L,QSA]
 
 
 # make landing look like the root
-#RewriteRule ^$ /landing.html [L]
-RewriteRule ^$ /asdf.html [L]
+RewriteRule ^$ /landing.html [L]
+#RewriteRule ^$ /asdf.html [L]
 
 
 ErrorDocument 404 /404.html
@@ -116,6 +116,9 @@ Creator pages
   </div>
 </div>
 </div>
+
+
+-- This shouldn't change now
 
 <div id="withdrawModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
