--- a/resources/web/creator_pricing.html
+++ b/resources/web/creator_pricing.html
@@ -613,7 +613,7 @@
 
        <div class="form-group form-group-lg">
 
-         <label class="col-sm-2 control-label" for="formGroupInputLarge">Total after 5% fee</label>
+         <label id="fee_pct" class="col-sm-2 control-label" for="formGroupInputLarge"></label>
          <div id="withdrawAmountAfterFee" class="col-sm-10 form-control-static">
          </div>
        </div>
