--- a/resources/uncommon.html
+++ b/resources/uncommon.html
@@ -3,9 +3,29 @@
 
 Real version
 -------------
-change tools.js
+change tools.js :
 var sparkService = "https://bitpieces.com:4567/"
 var cookie_path_name = "prod";
+
+Real tracking code in common.js :
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-54159960-1', 'auto');
+  ga('send', 'pageview');
+
+test tracking code : 
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-54002327-1', 'auto');
+  ga('send', 'pageview');
+
+
 
 favicon : 
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
