--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -260,10 +260,14 @@
 <!-- FOOTER -->
 <hr class="featurette-divider">
 <footer>
-  <p class="pull-right"><a href="#">Back to top</a></p>
-  <p>&copy; 2014 Bitpieces, Inc. &middot; <a href="/about">About</a> &middot; <a href="/contact">Contact</a>
-    &middot; <a href="/FAQ">Support</a> &middot; <a href="https://github.com/tchoulihan/bitpieces">Github</a></p>
-  </footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2014 Bitpieces, Inc. &middot; 
+<a href="/about">About</a> &middot; 
+<a href="/contact">Contact</a> &middot; 
+<a href="/FAQ">Support</a> &middot; 
+<a href="https://github.com/tchoulihan/bitpieces">Github</a>
+</p>
+      </footer>
 
   
 </div>
