--- a/resources/web/creators_register.html
+++ b/resources/web/creators_register.html
@@ -756,6 +756,16 @@
 </div>
 </div>
 
+<hr class="featurette-divider">
+<footer>
+  <p class="pull-right"><a href="#">Back to top</a></p>
+  <p>&copy; 2014 Bitpieces, Inc. &middot; 
+    <a href="/about">About</a> &middot; 
+    <a href="/contact">Contact</a> &middot; 
+    <a href="/FAQ">Support</a> &middot; 
+    <a href="https://github.com/tchoulihan/bitpieces">Github</a>
+  </p>
+</footer>
 
 <!-- end of wrapper -->
 </div>
