--- a/resources/testweb/userdashboard_funds.html
+++ b/resources/testweb/userdashboard_funds.html
@@ -217,8 +217,8 @@
     <a href="/about">About</a> &middot; 
     <a href="/contact">Contact</a> &middot; 
     <a href="/FAQ">Support</a> &middot; 
-    <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github"></i></a>
-    <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter"></i></a>
+    <a href="https://github.com/tchoulihan/bitpieces"><i class="fa fa-github"></i></a> &middot; 
+    <a href="https://twitter.com/Bitpieces"><i class="fa fa-twitter"></i></a> &middot; 
   </p>
       </footer>
         
