--- a/resources/web/creator_settings.html
+++ b/resources/web/creator_settings.html
@@ -75,7 +75,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/discover">Discover</a></li>
         <li><a href="/creators_register">Creators</a></li> 
-        <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+        <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
                <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
                <li><a href="#logout" class="hide">Log Out</a></li> -->
         <li class="dropdown">
