--- a/resources/web/userdashboard_pieces.html
+++ b/resources/web/userdashboard_pieces.html
@@ -70,10 +70,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
      <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="/discover">Discover</a></li>
       <li><a href="/creators_register">Creators</a></li> 
-      <li><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+      <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
         <ul class="dropdown-menu">
