--- a/resources/web/creator_rewards.html
+++ b/resources/web/creator_rewards.html
@@ -129,15 +129,15 @@
       </div>
       <div class="list-group">
         <li class="list-group-item">
-         <a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a>
+         <a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard fa-fw"></i> &nbsp; Overview</a>
          <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
        </li>
-       <a class="list-group-item" href="/creators/main" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Main</a>
-       <a class="list-group-item" href="/creators/pricing" rel="keep-params"><i class="fa fa-money"></i> Price</a>
-       <a class="list-group-item" href="/creators/worth" rel="keep-params"><i class="fa fa-building-o"></i> Worth</a>
-       <a class="list-group-item active" href="/creators/rewards" rel="keep-params"><i class="fa fa-trophy"></i> Rewards</a>
-       <a class="list-group-item" href="/creators/funds" rel="keep-params"><i class="fa fa-bank"></i> Funds</a>
-       <a class="list-group-item" href="/creators/pieces" rel="keep-params"><i class="fa fa-cubes"></i> Pieces</a>
+       <a class="list-group-item" href="/creators/main" rel="keep-params"><i class="fa fa-bar-chart-o fa-fw"></i> &nbsp; Main</a>
+       <a class="list-group-item" href="/creators/pricing" rel="keep-params"><i class="fa fa-money fa-fw"></i> &nbsp; Price</a>
+       <a class="list-group-item" href="/creators/worth" rel="keep-params"><i class="fa fa-building-o fa-fw"></i> &nbsp; Worth</a>
+       <a class="list-group-item active" href="/creators/rewards" rel="keep-params"><i class="fa fa-trophy fa-fw"></i> &nbsp; Rewards</a>
+       <a class="list-group-item" href="/creators/funds" rel="keep-params"><i class="fa fa-bank fa-fw"></i> &nbsp; Funds</a>
+       <a class="list-group-item" href="/creators/pieces" rel="keep-params"><i class="fa fa-cubes fa-fw"></i> &nbsp; Pieces</a>
        
      </div>
    </div>        
@@ -187,7 +187,7 @@
   <div class="col-md-12">
 
     <ol class="breadcrumb">
-      <li><a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard"></i> Overview</a></li>
+      <li><a href="/creators/overview" rel="keep-params"><i class="fa fa-dashboard fa-fw"></i> &nbsp; Overview</a></li>
       <li class="active"><i class="fa fa-table"></i> Rewards</li>
     </ol>
   </div>
