--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -200,7 +200,7 @@
           <div class="col-lg-4">
             <i class="fa fa-btc fa-5x"></i>
             <h2>Buy pieces</h2>
-            <p>Fund your favorite bands, artists, creators, and small businesses by buying pieces of their brand. Your pieces <b>automatically and continuously</b>  earn <a href="/FAQ#what_are_rewards">rewards</a> from the moment they are bought, which build up over time. After a creator has sold their initial pieces, users can <a href="/FAQ#what_are_bids_and_asks">bid and sell</a> their pieces to other users on an open marketplace. </p>
+            <p>Fund your favorite bands, artists, creators, and small businesses by buying pieces of their brand. Your pieces <b>automatically and continuously</b>  earn <a href="/FAQ#what_are_rewards">rewards</a> from the moment they are bought, which build up over time. After a creator has sold their initial pieces, funders can <a href="/FAQ#what_are_bids_and_asks">bid and sell</a> their pieces to other users on an <b>open marketplace</b>. </p>
             
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
