--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -338,8 +338,8 @@
                         data-bv-stringlength-max="30"
                         data-bv-stringlength-message="The username must be more than 3 and less than 30 characters long"
 
+                        data-bv-regexp-regexp="^(?=.{8,20}$)(?![_.])(?!.*[_.]{2})[a-zA-Z0-9._]+(?<![_.])$"
                         data-bv-regexp-message="Not a valid username(no spaces, etc)"
-                        pattern="^(?=.{8,20}$)(?![_.])(?!.*[_.]{2})[a-zA-Z0-9._]+(?<![_.])$"
 
                         >
                       </div>
