--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -330,7 +330,7 @@
                         data-bv-notempty-message="The username is required and cannot be empty"
 
                         data-bv-regexp="true"
-                        data-bv-regexp-regexp="^(?=.{8,20}$)(?![_.])(?!.*[_.]{2})[a-zA-Z0-9._]+(?<![_.])$"
+                        data-bv-regexp-regexp="^(?![_.])(?!.*[_.]{2})[a-zA-Z0-9._]+(?<![_.])$"
                         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                         data-bv-stringlength="true"
