--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -330,7 +330,7 @@
                         data-bv-notempty-message="The username is required and cannot be empty"
 
                         data-bv-regexp="true"
-                        data-bv-regexp-regexp="[a-zA-Z0-9._]+"
+                        data-bv-regexp-regexp="^[a-z0-9_-]{3,16}$+"
                         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                         data-bv-stringlength="true"
